--- a/packages/core/src/ui/components/AddressCard/AddressDisplayItem.module.scss
+++ b/packages/core/src/ui/components/AddressCard/AddressDisplayItem.module.scss
@@ -7,7 +7,7 @@
 
   &:global(.ant-dropdown-trigger) {
     svg:last-of-type {
-      color: var(--light-mode-dark-grey, --color-white) !important;
+      color: var(--light-mode-dark-grey, var(--color-white)) !important;
       transition: transform 0.5s ease-in-out;
     }
   
@@ -23,7 +23,7 @@
   }
 
   &:hover {
-    background-color: var(--color-white);
+    background-color: var(--dark-mode-grey, var(--color-white));
   }
 }
 
@@ -31,14 +31,20 @@
   .ant-dropdown-menu {
     border-radius: size_unit(1) !important;
     padding: size_unit(1) size_unit(2) !important;
+    background-color: var(--dark-mode-mid-black, var(--color-white)) !important;
   }
 
   .ant-dropdown-menu-item {
     padding: size_unit(1.5) 0 !important;
+    color: var(--text-color-primary) !important;
+
+    &:hover {
+      background-color: inherit !important;
+    }
   }
 
   .ant-dropdown-menu-item:not(:last-child) {
-    border-bottom: 1px solid var(--light-mode-light-grey-plus);
+    border-bottom: 1px solid var(--dark-mode-mid-grey, var(--light-mode-light-grey-plus));
   }
   
   .ant-dropdown-menu-title-content {
